web/app/themes/wp-gds-theme/resources/assets/styles/common/reset.scss
@use '~normalize-scss/sass/normalize' as *;

@include normalize($include: (
  // document,
  sections,
  // grouping,
  // links,
  // text,
  // embedded,
  // forms,
  // interactive,
  // scripting,
  // hidden
));

html {
  @media (prefers-reduced-motion: no-preference) {
    scroll-behavior: smooth;
  }
}

body {
  // Hide overflowing margins.
  overflow-x: hidden;
  // Improve render performance by disabling some gestures.
  touch-action: manipulation;
}

button {
  appearance: none;
  background: transparent;
  border: 0;
  cursor: pointer;
}

img {
  // Get rid of gap under images
  display: inline-block;
  vertical-align: middle;

  // Grid defaults to get images and embeds to work properly
  max-width: 100%;
  height: auto;
  -ms-interpolation-mode: bicubic;
}

table {
  border-collapse: collapse;
}

// Add whitespace above anchor points
h1[id]::before,
h2[id]::before,
h3[id]::before,
h4[id]::before,
h5[id]::before,
h6[id]::before {
  content: '';
  display: block;
  height: 100px;
  margin-top: -100px;
  visibility: hidden;
}

